<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_backgr"
    android:padding="30dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/signing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tt_signing"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />


    <ImageView
        android:id="@+id/bt_br_storm_bg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_bg"
        app:layout_constraintBottom_toBottomOf="@id/br_storm"
        app:layout_constraintEnd_toEndOf="@id/br_storm"
        app:layout_constraintStart_toStartOf="@id/br_storm"
        app:layout_constraintTop_toTopOf="@id/br_storm"


        />

    <ImageView
        android:id="@+id/br_storm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="66dp"
        android:background="@drawable/bg_storm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signing" />

    <TextView
        android:id="@+id/greeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tt_greeting"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/tt_task"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/greeting" />


    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:layout_marginBottom="20dp"
        android:background="@color/white"
        android:hint="@string/et_email"
        android:paddingHorizontal="16dp"
        android:paddingVertical="16dp"
        android:textColorHint="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@color/white"
        android:hint="@string/et_password"
        android:inputType="textPassword"
        android:paddingHorizontal="16dp"
        android:paddingVertical="16dp"
        android:textColorHint="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/btn_signing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        />


    <Button
        android:id="@+id/btn_signing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@color/btn_sign"
        android:text="@string/btn_signing"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tt_forgot_passsword"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tt_forgot_passsword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tt_forgot_pass"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_forgot_passsword"


        />

    <TextView
        android:id="@+id/btn_forgot_passsword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/btn_forgot_password"
        android:textColor="@color/btn_sign"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/tt_forgot_passsword"

        />


</androidx.constraintlayout.widget.ConstraintLayout>